--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = -s
+addopts = -s --alluredir report
 testpaths = ./Scripts
 python_files = test_*
 python_classes = class Test_*
